# QDPro_v3

./: .replit  DEPLOYMENT_GUIDE.md  FEATURES.md  INTERNAL_CHECKLIST.md  PRODUCT_TIERS.md  README.md  USER_GUIDE.md  activation_count  analysis_engine.py  anti_tampering.py  audit.py  auth.py  code_obfuscator.py  compliance_checker.py  crypto_validation.py  database_exporter.py  database_maintenance.py  deployment_checklist.py  deployment_manager.py  error_recovery.py  fedramp_compliance.py  feedback_system.py  geofence_security.py  incident_response.py  layer_data.json  legacy_import.py  license_control.py  license_recovery.py  main.py  map_providers.py  map_service.py  map_validation.py  media_protection.py  mfa.py  migrations.py  offline_sync.py  pyproject.toml  qd_cli.py  qd_engine.py  rate_limiter.py  (+14 more)
attached_assets/: Pasted--DOCTYPE-html-html-head-title-QDPro-Site-Plan-title-Leaflet-CSS-link--1740639288057.txt  Pasted--DOCTYPE-html-html-head-title-QDPro-Site-Plan-title-Leaflet-CSS-link-rel-s-1740457239885.txt  Pasted--DOCTYPE-html-html-head-title-QDPro-Site-Plan-title-Leaflet-Leaflet-Draw-CSS--1740112462041.txt  Pasted--DOCTYPE-html-html-head-title-QDPro-Site-Plan-title-link-rel-stylesheet-href-ht-1740302325455.txt  Pasted--DOCTYPE-html-html-head-title-QDPro-Site-Plan-title-link-rel-stylesheet-href-ht-1740379262230.txt  Pasted--DOCTYPE-html-html-head-title-QDPro-Site-Plan-title-link-rel-stylesheet-href-https--1740454901635.txt  Pasted--DOCTYPE-html-html-head-title-QDPro-Site-Plan-title-link-rel-stylesheet-href-https--1740455394629.txt  (+73 more)
audit_logs/: 20250220.encrypted
(+35 files in other folders)
