[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.8",
    "geoalchemy2>=0.17.1",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.10.6",
    "shapely>=2.0.7",
    "sqlalchemy>=2.0.38",
    "uvicorn>=0.34.0",
]
